New local settings (PROVA)

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -2,7 +2,7 @@
 {% extends 'portfolio/base.html' %}
 
 {% block content %}
-    <h1> Tom's Portfolio </h1>
+    <h1> Tom's Portfolio Prova </h1>
 
     {% load static %}
 
